fix: Color selector width overflow

--- a/styles.css
+++ b/styles.css
@@ -299,13 +299,13 @@ select.menu-open {
         font-size: 1.2em;
     }
     
-    #presetSelect {
+    #presetSelect, #colorScheme {
         max-width: calc(100vw - 360px);
     }
 }
 
 @media (max-width: 420px) {
-    #presetSelect {
+    #presetSelect, #colorScheme {
         display: none !important;
     }
 
